# docs/swagger.json
@@ -32,10 +32,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/main.album"
-                            }
+                            "$ref": "#/definitions/main.album"
                         }
                     }
                 }
